# barebones-resume

./: .gitignore  compose.py  eslint.config.js  generate.ts  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  resume.md  template.html  tsconfig.json
