[tool.poetry]
name = "barebones-resume"
version = "0.1.0"
description = ""
authors = ["Matt Ball <matt.ball.2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
